# tmp-elevator

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
prototypes/: elevator-prototype.ipynb  readme.md  requirements.txt
prototypes/.ipynb_checkpoints/: elevator-prototype-checkpoint.ipynb
src/: CMakeLists.txt  main.cpp
src/Elevator/: CMakeLists.txt  Elevator.cpp  Elevator.hpp  ElevatorConstants.hpp
src/Utilities/: CMakeLists.txt  Utilities.hpp
tests/: CMakeLists.txt
tests/Elevator/: test_elevator.cpp
tests/Utilities/: test_utilities.cpp
